tests/ui/bitfield/complete_field_gap_end.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/complete_field_gap_end.rs:6:35
  |
6 | struct BitField(#[field(size = 2, complete)] Field); // Field value `3` is missing.
  |                                   ^^^^^^^^ the evaluated program panicked at 'Complete field must not have gaps', $DIR/tests/ui/bitfield/complete_field_gap_end.rs:6:35
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
